# mbarcodescanner

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE-MiloCodeDB.txt  MBarcodeCaptureFilter.cpp  MBarcodeCaptureFilter.h  MImageConverters.cpp  MImageConverters.h  README.md  camera_tricks.md  how_to_build.md  mbarcodescanner.doxyfile  mbarcodescanner.pri
doc/branding/: milo-doxygen.css
example/: barcode_scanner.pro  main.cpp
example/ui/qml/: MainWindow.qml  main.qml
scripts/: build_barcode_libraries.sh
